--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -22,6 +22,6 @@
     
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script src="/javascripts/ajaxFunction.js"></script>
 
 </head>
